Change "group" to "Community Group".

--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -80,8 +80,9 @@
 <body> 
   <section id='abstract'> 
     <p> 
-The purpose of the Web Payments group at the World Wide Web Consortium (W3C) 
-is to create systems that enable people and businesses on the Web to send each 
+The purpose of the Web Payments Community Group at the 
+World Wide Web Consortium (W3C) is to create systems that enable people 
+and businesses on the Web to send each 
 other money as easily as they exchange instant messages and email today. The 
 systems strive to be easy to use, currency agnostic, secure, decentralized and 
 implementable by anyone in a patent and royalty-free manner. The group is 
