Clarify definition of buyer.

--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -180,7 +180,7 @@ the <tref>entity</tref> receiving value in a <tref>transaction</tref>.
       </dd>
       <dt><tdef>buyer</tdef></dt>
       <dd>
-an <tref>entity</tref> that is performing a purchase.
+an <tref>entity</tref> purchasing a product or service.
       </dd>
       <dt><tdef>merchant</tdef></dt>
       <dd>
