--- a/specs/source/roadmap/index.html
+++ b/specs/source/roadmap/index.html
@@ -74,7 +74,7 @@
           localBiblio:  {
             'IDENTITY-CREDENTIALS': {
               title: 'Identity Credentials',
-              href: 'opencreds.org/specs/source/identity-credentials/',
+              href: 'http://opencreds.org/specs/source/identity-credentials/',
               authors: ['Manu Sporny', 'Dave Longley'],
               status:   'CG-DRAFT',
               publisher:  'W3C Credentials Community Group'
