Add example sections to use cases.

--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -256,6 +256,14 @@ on the Web.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
         <p>
 
@@ -270,6 +278,14 @@ on the Web.
 Require data portability for financial data and credentials that is required 
 for core transaction functionality.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -287,6 +303,14 @@ Ensure the Web payments solution can provide an abstraction layer that
 integrates with existing payment methods (eg: VISA, Mastercard, ACH, PayPal, 
 debit card, Premium SMS, etc.)
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -307,6 +331,14 @@ Secure Element for large amounts.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
         <p>
 
@@ -321,6 +353,14 @@ Secure Element for large amounts.
 Ensure the technology can be extended or does not prohibit the implementation 
 of simple digital contracts and smart contracts.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -338,6 +378,14 @@ Don't prevent a physical version of a digital receipt that can be verified,
 perhaps by printing out a QR Code on a slip of paper with some additional 
 information.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -363,6 +411,14 @@ in the set of Web Payments 1.0 specifications.
 A buyer selects an item to purchase on merchant's site, merchant generates a 
 purchase request that will be processed by the buyer's payment processor.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -419,6 +475,14 @@ the payment process.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -461,6 +525,14 @@ When a payee intends to make a payment, they are given a choice to pick among
 the intersection of the payment processors they're registered with and the 
 payment processors that are advertised by the merchant/payee.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -506,6 +578,14 @@ based on potential payment processor choice.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -549,6 +629,14 @@ transaction to receive a discount or other benefits.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -589,6 +677,14 @@ transaction to receive a discount or other benefits.
       <p>
 Leveraging variable degrees of pseudo-anonymity per requirements of the payment transaction.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -638,6 +734,14 @@ price or speed) before executing the most desirable transaction.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -685,6 +789,14 @@ Parity; Commodity Index; etc.)
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -726,6 +838,14 @@ Parity; Commodity Index; etc.)
 A buyer uses a native non-browser application on their mobile phone or tablet, 
 or a web browser to make a purchase at an app store.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -770,6 +890,14 @@ A buyer makes a purchase from within an application for premium content, virtual
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -812,6 +940,14 @@ Temporary payment tokens for merchants. If token is stolen, thief does not
 get access to financial account. Tokenization mechanism that protects the buyer 
 and merchant from theft of credentials.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -860,6 +996,14 @@ repeat purchases.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -906,6 +1050,14 @@ to the merchant's website with a digital receipt confirming the purchase.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -949,6 +1101,14 @@ processor presents them with an option to subscribe to a merchant's product or
 service, which will result in periodic payments at a known value to the 
 merchant.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -998,6 +1158,14 @@ in the background with no interactive purchase process required.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -1041,6 +1209,14 @@ digital receipts with a particular identity/wallet/data storage provider. The
 entity decides to switch to a different identity/wallet/data storage provider 
 and all wallet, receipt, and credential data comes with them.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
@@ -1087,6 +1263,14 @@ regulatory compliance.
       </p>
 
       <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section> 
         <h3>Details</h3> 
 
         <section> 
@@ -1131,6 +1315,14 @@ standardized, cryptographically signed, machine-readable, digital receipt that
 is issued to the buyer. Entities involved in the transaction (merchant, buyer, 
 payee) may then use the receipt as a proof-of-purchase for the good or service.
       </p>
+
+      <section> 
+        <h3>Examples</h3> 
+        <ul>
+          <li>
+          </li>
+        </ul>
+      </section>
 
       <section> 
         <h3>Details</h3> 
