--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -12,7 +12,7 @@
       For the three scripts below, if your spec resides on dev.w3 you can check them
       out in the same tree and use relative links so that they'll work offline,
      --> 
-    <script src='../../respec-w3c-common.js' class='remove'></script>
+    <script src='../specs/respec-w3c-common.js' class='remove'></script>
 
     <script class='remove'> 
       var respecConfig = {
