Add an issue about updating spec.

--- a/specs/source/identity-credentials/index.html
+++ b/specs/source/identity-credentials/index.html
@@ -107,6 +107,12 @@ Web.
       </p>
 
       <p class="issue">
+This spec hasn't been updated in many months and the work has evolved quite
+a bit since then. An update will occur as soon as other supporting documents
+are in order and time permits. -- 9/24/15
+      </p>
+
+      <p class="issue">
 Add a section specifying how blank nodes or pseudonyms can be used for
 self-signed and IdP-asserted credentials.
       </p>
