--- a/specs/source/secure-messaging/index.html
+++ b/specs/source/secure-messaging/index.html
@@ -147,6 +147,11 @@ Advanced Encryption Standard [[!AES]], and HTTP Signatures [[!HTTP-SIGNATURES]].
 The registration process is necessary in order to publish a public key at
 a location on the Web.
       </p>
+      
+<div class="issue">Do not use <code>.well-known</code>, instead content
+negotiate for <code>application/ld+json</code> and return a JSON-LD document
+with the service information. Perhaps generalize this in another spec
+as "Linked Data Service Discovery".</div>
 
       <section>
         <h2>Key Registration Terms</h2>
