--- a/specs/source/web-keys/index.html
+++ b/specs/source/web-keys/index.html
@@ -127,9 +127,9 @@ extending it to support discoverable, machine-readable public keys.
          <p>
 Technologies utilized in this specification include the
 JavaScript Object Notation for Linking Data [[!JSON-LD]],
-the HyperText Transfer Protocol [[!HTTP11]], the
-Advanced Encryption Standard [[!AES]], and Signing HTTP Messages
-[[!HTTP-SIGNATURES]].
+the HyperText Transfer Protocol [[!HTTP11]], the Public-Key Cryptography
+Standards (PKCS) #1 [[!PKCS1]], the Advanced Encryption Standard [[!AES]],
+and Signing HTTP Messages [[!HTTP-SIGNATURES]].
          <p>
       </section>
 
@@ -505,8 +505,8 @@ verify the sender of the message.
 The following terminology is used to describe concepts used to generate and
 secure messages that are sent and received using Secure Messaging. Many of these
 terms are borrowed from public/private key cryptography. A more complete
-description of public/private cryptography can be found in
-The Advanced Encryption Standard [[AES]].
+description of RSA-based signatures can be found in Public-Key Cryptography
+Standards (PKCS) #1 [[!PKCS1]].
         </p>
 
         <dl>
